<resources>
    <string name="app_name">FunRide</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_reservation">Reservation</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_contact">Contact us</string>
    <string name="prompt_email">   Email</string>
    <string name="prompt_password">  Password</string>
    <string name="action_sign_in"> Login </string>
    <string name="action_sign_up_line"> OR </string>
    <string name="action_register"> Register </string>
    <string name="action_saves"> Saves Changes </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_fname">First name</string>
    <string name="prompt_lname">Last name</string>

    <string name="connection_issue_msg">Please check your internet connection.</string>

    <string name="connection_dialog"> Connection Error</string>

    <string name="activity_login_alert_ok">OK</string>

    <string name="activity_loading_msg">Please wait, Loading ...</string>

    <string name="activity_signup_loading_msg">Please wait, We are creating your account...</string>

    <string name="activity_search_loading_msg">Please wait, We are searching for your ride...</string>

    <string name="activity_login_fail_msg">Login Failed !! Try again later.</string>

    <string name="activity_login_enter_email">Please enter EmailID.</string>

    <string name="activity_login_enter_password">Please enter Password.</string>

    <string name="activity_login_password_err">Password should be grater than 6 characters.</string>

    <string name="activity_login_email_invalid">EmailID is invalid.</string>

    <string name="activity_login_password_wrong">Password is wrong.</string>

    <string name="activity_signup_email_existing">Email already existing. Try to login.</string>

    <string name="activity_post_error">Something went wrong, Please verify your data.</string>

    <string name="activity_post_success"> Your trip is posted successfully</string>>

    <string name="activity_reservation_success"> Your trip has been booked successfully</string>>


    #-------------Error Handlers Strings-----------------------#
    <string name="username_password_empty">Username and/or password empty, Please Try Again..</string>

    <string name="activity_post_arrival_and_departure_error">Arrival and/or Departure must not be empty or the same, Please Try Again...</string>


    #------Post Activity Strings------------------------------------#
    <string name="from"> Departure </string>
    <string name="to"> Destination </string>
    <string name="date"> Date </string>
    <string name="time"> Time </string>
    <string name="seats"> Seats </string>
    <string name="lagguage"> Bag Allowed </string>
    <string name="cost"> Cost </string>
    <string name="post_ride">Post Ride</string>
    <string name="search_ride">Search</string>
    <string name="logout">Logout</string>

    #-------Profile-------#
    <string name="trip_done">Trips Done</string>
    <string name="contact">Contact Us</string>
    <string name="ratings">Star Ratings</string>


    <string name="action_search"><b>Search</b></string>

    <string name="api_key">AIzaSyByniyl8kvVAZ0eGBbPxyUVzVg9jgV5XfA</string>
    <string name="title_activity_edit_user_profile">EditUserProfile</string>>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We are sending your message to Fun-Ride support...</string>
    <string name="contact_posted">Your message has been successfully sent.</string>

</resources>
