<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/avatar"
        android:drawableLeft="@drawable/avatar"
        android:hint="@string/prompt_email"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        />

    <Button
        android:id="@+id/login"
        android:background="#009688"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_sign_in"
        />

    <Button
        android:id="@+id/register"
        android:background="#2196F3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_sign_up"
        />
</LinearLayout>
